Seed db, ScoresController first action

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "MtgDatabase":  "Data Source=localhost;Initial Catalog=MtgScores2;Integrated Security=True"
   }
 }
