--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "test": "karma start ClientApp/test/karma.conf.js"
   },
   "dependencies": {
-    "@angular/animations": "4.1.2",
+    "@angular/animations": "^4.1.2",
+    "@angular/cdk": "^2.0.0-beta.10",
     "@angular/common": "4.1.2",
     "@angular/compiler": "4.1.2",
     "@angular/core": "4.1.2",
     "@angular/forms": "4.1.2",
     "@angular/http": "4.1.2",
+    "@angular/material": "^2.0.0-beta.10",
     "@angular/platform-browser": "4.1.2",
     "@angular/platform-browser-dynamic": "4.1.2",
     "@angular/platform-server": "4.1.2",
@@ -28,6 +30,7 @@
     "expose-loader": "0.7.3",
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
+    "font-awesome": "4.7.0",
     "html-loader": "0.4.5",
     "isomorphic-fetch": "2.2.1",
     "jquery": "3.2.1",
@@ -43,8 +46,7 @@
     "webpack": "2.5.1",
     "webpack-hot-middleware": "2.18.0",
     "webpack-merge": "4.1.0",
-    "zone.js": "0.8.10",
-    "font-awesome": "4.7.0"
+    "zone.js": "0.8.10"
   },
   "devDependencies": {
     "@types/chai": "3.5.2",
