--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
     "test": "karma start ClientApp/test/karma.conf.js"
   },
   "dependencies": {
-    "@angular/animations": "^4.1.2",
-    "@angular/cdk": "^2.0.0-beta.10",
-    "@angular/common": "4.1.2",
-    "@angular/compiler": "4.1.2",
-    "@angular/core": "4.1.2",
-    "@angular/forms": "4.1.2",
-    "@angular/http": "4.1.2",
-    "@angular/material": "^2.0.0-beta.10",
-    "@angular/platform-browser": "4.1.2",
-    "@angular/platform-browser-dynamic": "4.1.2",
-    "@angular/platform-server": "4.1.2",
-    "@angular/router": "4.1.2",
+    "@angular/animations": "^5.0.0",
+    "@angular/cdk": "^2.0.0-beta.12",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/material": "^2.0.0-beta.12",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/platform-server": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "@types/node": "7.0.18",
     "angular2-template-loader": "0.6.2",
-    "aspnet-prerendering": "^2.0.5",
-    "aspnet-webpack": "^1.0.29",
+    "aspnet-prerendering": "^3.0.1",
+    "aspnet-webpack": "^2.0.1",
     "awesome-typescript-loader": "3.1.3",
     "bootstrap": "3.3.7",
     "css": "2.2.1",
@@ -38,7 +38,7 @@
     "preboot": "4.5.2",
     "raw-loader": "0.5.1",
     "reflect-metadata": "0.1.10",
-    "rxjs": "5.4.0",
+    "rxjs": "^5.5.2",
     "style-loader": "0.17.0",
     "to-string-loader": "1.1.5",
     "typescript": "2.3.2",
