--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
     "test": "karma start ClientApp/test/karma.conf.js"
   },
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/material": "^2.0.0-beta.12",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/platform-server": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular/animations": "5.2.9",
+    "@angular/cdk": "5.2.4",
+    "@angular/common": "5.2.9",
+    "@angular/compiler": "5.2.9",
+    "@angular/core": "5.2.9",
+    "@angular/forms": "5.2.9",
+    "@angular/http": "5.2.9",
+    "@angular/material": "5.2.4",
+    "@angular/platform-browser": "5.2.9",
+    "@angular/platform-browser-dynamic": "5.2.9",
+    "@angular/platform-server": "5.2.9",
+    "@angular/router": "5.2.9",
     "@types/node": "7.0.18",
     "angular2-template-loader": "0.6.2",
     "aspnet-prerendering": "^3.0.1",
