nignx config - fix angular routing

--- a/src/MTG.Scores2.Web/nginx.conf
+++ b/src/MTG.Scores2.Web/nginx.conf
@@ -42,7 +42,8 @@ http {
                                                                                                 
         location / {                                                                            
             root   html;                                                                        
-            index  index.html index.htm;                                                        
+            index  index.html index.htm;
+			try_files $uri $uri/ /index.html;			
         }   
 
         location /api/ {
