--- a/docker/db/Dockerfile
+++ b/docker/db/Dockerfile
@@ -8,5 +8,5 @@ ENV ACCEPT_EULA="Y" `
 VOLUME ${DATA_PATH}
 WORKDIR C:\init
 
-COPY Initialize-Database.ps1 .
+COPY docker/db/Initialize-Database.ps1 .
 CMD powershell ./Initialize-Database.ps1 -sa_password $env:sa_password -data_path $env:data_path -Verbose
