--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '2.1'
 services:
     api:
-        build: src/MTG.Scores2.Api/.
+        build: 
+          context: ./
+          dockerfile: ./docker/api/Dockerfile
         depends_on:
             db:
              condition: service_healthy
@@ -9,7 +11,9 @@ services:
             - app-net
     db:
         build: 
-          context: Database/.
+          context: 
+          context: ./
+          dockerfile: ./docker/db/Dockerfile
         ports: 
           - "1433:1433"
         healthcheck:
@@ -21,7 +25,9 @@ services:
         networks:
             - app-net
     web:
-      build: src/MTG.Scores2.Web/.
+      build: 
+          context: ./
+          dockerfile: ./docker/web/Dockerfile
       ports:
           - "80:80"
       depends_on:
