--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -2,11 +2,11 @@ FROM microsoft/dotnet:sdk AS build-env
 WORKDIR /app
 
 # Copy csproj and restore as distinct layers
-COPY *.csproj ./
+COPY src/MTG.Scores2.Api/*.csproj ./
 RUN dotnet restore
 
 # Copy everything else and build
-COPY . ./
+COPY src/MTG.Scores2.Api/* ./
 RUN dotnet publish -c Release -o out
 
 # Build runtime image
