--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.3'
 services:
   api:
     build: 
-      context: ./
-      dockerfile: ./docker/api/Dockerfile
+      context: src/api/
+      dockerfile: ./Dockerfile
     depends_on:
       - db
     networks:
@@ -23,8 +23,8 @@ services:
       - app-net
   web:
     build: 
-      context: ./
-      dockerfile: ./docker/web/Dockerfile
+      context: src/web/
+      dockerfile: ./Dockerfile
     ports:
       - "80:80"
     depends_on:
