--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -2,11 +2,11 @@ FROM microsoft/dotnet:sdk AS build-env
 WORKDIR /app
 
 # Copy csproj and restore as distinct layers
-COPY src/MTG.Scores2.Api/*.csproj ./
+COPY MTG.Scores2.Api/*.csproj ./
 RUN dotnet restore
 
 # Copy everything else and build
-COPY src/MTG.Scores2.Api/* ./
+COPY MTG.Scores2.Api/* ./
 RUN dotnet publish -c Release -o out
 
 # Build runtime image
