--- a/src/api/MTG.Scores2.Api/appsettings.json
+++ b/src/api/MTG.Scores2.Api/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MtgDatabase": "Data Source=db;Initial Catalog=MtgScores2;User=sa;Password=Your_password123;"
+    "MtgDatabase": "Data Source=localhost;Initial Catalog=MtgScores2;Integrated Security=SSPI"
   }
 }
