change verison of terser package

--- a/src/web/MTG.Scores2.Web/package.json
+++ b/src/web/MTG.Scores2.Web/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
     "rxjs": "6.3.3",
+    "terser": "^3.14.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
