--- a/azure-pipelines.docker.yml
+++ b/azure-pipelines.docker.yml
@@ -13,10 +13,14 @@ variables:
 - group: Dockerhub
 - name: imageName_api
   value: 'mtgscores2_api:ci-$(build.buildId)'
+- name: imageName_api_latest
+  value: 'mtgscores2_api:latest'
 - name: imageName_api_build
   value: 'mtgscores2_api_build:ci-$(build.buildId)'
 - name: imageName_web
   value: 'mtgscores2_web:ci-$(build.buildId)'
+- name: imageName_web_latest
+  value: 'mtgscores2_web:latest'
 
 steps:
 - script: |
@@ -32,19 +36,13 @@ steps:
     testRunner: VSTest
     testResultsFiles: '**/*.trx'
 
-- task: Docker@1
-  inputs:
-    imageName: $(dockerhub_user)/$(imageName_api)
-    dockerFile: src/api/ci.runtime.yml
-    addDefaultLabels: false
+- script: |
+    docker build -f src/api/ci.runtime.yml -t $(dockerhub_user)/$(imageName_api) -t $(dockerhub_user)/$(imageName_api_latest) src/api/
   displayName: 'docker build runtime image api'
 
-- task: Docker@1
-  inputs:
-    imageName: $(dockerhub_user)/$(imageName_web)
-    dockerFile: src/web/Dockerfile
-    addDefaultLabels: false
-  displayName: 'docker build web'
+- script: |
+    docker build -f src/web/Dockerfile -t $(dockerhub_user)/$(imageName_web) -t $(dockerhub_user)/$(imageName_web_latest) src/web/
+  displayName: 'docker build web image'
 
 - task: Docker@1
   inputs:
@@ -53,14 +51,12 @@ steps:
     command: login
   displayName: 'dockerhub login'
 
-- task: Docker@1
-  inputs:
-    command: Push an image
-    imageName: $(dockerhub_user)/$(imageName_api)
+- script: |
+    docker push $(dockerhub_user)/$(imageName_api)
+    docker push $(dockerhub_user)/$(imageName_api_latest)
   displayName: 'push api image to dockerhub'
   
-- task: Docker@1
-  inputs:
-    command: Push an image
-    imageName: $(dockerhub_user)/$(imageName_web)
-  displayName: 'push web image to dockerhub'
+- script: |
+    docker push $(dockerhub_user)/$(imageName_web)
+    docker push $(dockerhub_user)/$(imageName_web_latest)
+  displayName: 'push api image to dockerhub'
