images in docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.3'
 services:
   api:
+    image: "wpelczar/mtgscores2_api:latest"
     build: 
       context: src/api/
       dockerfile: ./Dockerfile
@@ -24,6 +25,7 @@ services:
     networks:
       - app-net
   web:
+    image: "wpelczar/mtgscores2_web:latest"
     build: 
       context: src/web/
       dockerfile: ./Dockerfile
