--- a/src/web/MTG.Scores2.Web/package.json
+++ b/src/web/MTG.Scores2.Web/package.json
@@ -11,31 +11,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.6",
+    "@angular/animations": "^8.2.7",
     "@angular/cdk": "^7.3.3",
-    "@angular/common": "^7.2.6",
-    "@angular/compiler": "^7.2.6",
-    "@angular/core": "^7.2.6",
-    "@angular/forms": "^7.2.6",
-    "@angular/http": "^7.2.6",
+    "@angular/common": "^8.2.7",
+    "@angular/compiler": "^8.2.7",
+    "@angular/core": "^8.2.7",
+    "@angular/forms": "^8.2.7",
     "@angular/material": "^7.3.3",
-    "@angular/platform-browser": "^7.2.6",
-    "@angular/platform-browser-dynamic": "^7.2.6",
-    "@angular/router": "^7.2.6",
+    "@angular/platform-browser": "^8.2.7",
+    "@angular/platform-browser-dynamic": "^8.2.7",
+    "@angular/router": "^8.2.7",
     "core-js": "^2.6.5",
-    "rxjs": "6.3.3",
+    "rxjs": "6.5.3",
     "terser": "3.14.1",
-    "zone.js": "^0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.3",
-    "@angular/cli": "^7.3.3",
-    "@angular/compiler-cli": "^7.2.6",
-    "@angular/language-service": "^7.2.6",
+    "@angular-devkit/build-angular": "~0.803.5",
+    "@angular/cli": "^8.3.5",
+    "@angular/compiler-cli": "^8.2.7",
+    "@angular/language-service": "^8.2.7",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "~8.9.4",
-    "codelyzer": "^4.5.0",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.0.0",
@@ -46,6 +45,6 @@
     "protractor": "^5.4.2",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~3.2.4"
+    "typescript": "~3.5.3"
   }
 }
