--- a/src/api/MTG.Scores2.Api/Properties/launchSettings.json
+++ b/src/api/MTG.Scores2.Api/Properties/launchSettings.json
@@ -11,8 +11,7 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "api/matches",
+      "launchUrl": "api/tournaments",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
