--- a/src/api/MTG.Scores2.Api/appsettings.json
+++ b/src/api/MTG.Scores2.Api/appsettings.json
@@ -2,5 +2,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MtgDatabase": "Data Source=localhost;Initial Catalog=MtgScores2;Integrated Security=SSPI"
-  }
+  },
+  "JwtBearerAuthority": "http://localhost:5000",
+  "JwtBearerIssuer": "http://localhost:5000"
 }
