--- a/src/identityserver/MTG.Scores2.IdentityServer/appsettings.json
+++ b/src/identityserver/MTG.Scores2.IdentityServer/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=AspIdUsers.db;"
-  }
+  },
+  "SpaClientUrl": "http://localhost:4200"
 }
