--- a/src/web/MTG.Scores2.Web/package.json
+++ b/src/web/MTG.Scores2.Web/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^8.2.7",
     "@angular/router": "^8.2.7",
     "core-js": "^2.6.5",
+    "ngx-spinner": "^8.0.3",
     "oidc-client": "^1.9.1",
     "rxjs": "6.5.3",
     "terser": "3.14.1",
