--- a/src/identityserver/MTG.Scores2.IdentityServer/appsettings.json
+++ b/src/identityserver/MTG.Scores2.IdentityServer/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AspIdUsers.db;"
+    "IdentityServerDatabase": "Data Source=localhost;Initial Catalog=MtgScores2IdentityServer;Integrated Security=SSPI"
   },
   "SpaClientUrl": "http://localhost:4200"
 }
