--- a/src/api/ci.runtime.yml
+++ b/src/api/ci.runtime.yml
@@ -1,5 +1,5 @@
 # Build runtime image
-FROM microsoft/dotnet:aspnetcore-runtime AS runtime
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
 WORKDIR /app
 COPY /out .
 ENTRYPOINT ["dotnet", "MTG.Scores2.Api.dll"]
