--- a/src/identityserver/MTG.Scores2.IdentityServer/appsettings.json
+++ b/src/identityserver/MTG.Scores2.IdentityServer/appsettings.json
@@ -2,5 +2,15 @@
   "ConnectionStrings": {
     "IdentityServerDatabase": "Data Source=localhost;Initial Catalog=MtgScores2IdentityServer;Integrated Security=SSPI"
   },
-  "SpaClientUrl": "http://localhost:4200"
+  "SpaClientUrl": "http://localhost:4200",
+  "Certificates": {
+    "Signing": {
+      "Path": "/certs/token_signing.pfx",
+      "Password": "Pass123$"
+    },
+    "Validation": {
+      "Path": "/certs/token_validation.pfx",
+      "Password": "Pass123$"
+    }
+  }
 }
